--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -105,16 +105,14 @@
 }
 
 .checkout .card-error p {
-    color: #fff !important;
-    margin-top: 27px;
     margin-bottom: 0;
     box-sizing: border-box;
     font-size: 17px !important;
     max-width: 427px;
-    padding: 12px 15px 14px 15px;
-    border-radius: 3px;
-    background-color: #731b58;
-    text-align: center;
+    color: #f00 !important;
+    text-align: left;
+    margin-top: -2px;
+    padding-left: 5px;
 }
 
 .checkout .page-header h1 {
