--- a/src/components/Public/Newsletter/styles.css
+++ b/src/components/Public/Newsletter/styles.css
@@ -1,6 +1,6 @@
 .newsletter {
     position: relative;
-    padding: 25px 80px 25px 200px;
+    padding: 25px 80px 45px;
     background-color: #c04c9c4d;
 }
 
@@ -25,7 +25,7 @@
 .newsletter input[type="text"] {
     border: 1px solid #c04c9c;
     border-radius: 3px;
-    width: 60%;
+    width: 70%;
     height: 25px;
     padding: 10px;
     display: inline-block;
@@ -36,18 +36,16 @@
 }
 
 .newsletter img {
-    position: absolute;
-    left: 70px;
-    top: 40px;
     width: 110px;
     margin-right: 15px;
-    margin-top: -19px;
+    float: left;
+    margin-top: -8px;
 }
 
 .newsletter .successMessage {
     color: #c04c9c;
     margin-top: 10px;
-    display: inline-block;
+    float: left;
 }
 
 .newsletter button {
