--- a/src/components/Public/Quoteimage/styles.css
+++ b/src/components/Public/Quoteimage/styles.css
@@ -6,7 +6,7 @@
 
 .quote-image p:first-child {
     font-size: 40px;
-    width: 70%;
+    width: 90%;
     top: 0;
     bottom: 0;
     left: 0;
@@ -16,7 +16,7 @@
 
 .quote-image p:nth-child(2) {
     font-size: 40px;
-    width: 70%;
+    width: 90%;
     top: 0;
     bottom: 0;
     left: 0;
@@ -33,7 +33,12 @@
     color: #fff;
     text-shadow: none;
     margin-left: 0;
-    left: auto;
+    text-align: right;
+    padding-right: 200px;
+    box-sizing: border-box;
+    width: 100%;
+    margin-left: 0;
+    left: 0;
 }
 
 .quote-image img {
@@ -46,7 +51,7 @@
     position: absolute;
     color: #fff;
     font-size: 40px;
-    width: 70%;
+    width: 90%;
     font-weight: 300;
     text-align: center;
     left: 50%;
