--- a/src/components/Public/Newsletter/styles.css
+++ b/src/components/Public/Newsletter/styles.css
@@ -1,7 +1,7 @@
 .newsletter {
     position: relative;
     padding: 25px 80px 45px;
-    background-color: #c04c9c4d;
+    background-color: #ecc6e0;
 }
 
 .newsletter .heading {
