--- a/src/components/Public/Payment/styles.css
+++ b/src/components/Public/Payment/styles.css
@@ -547,7 +547,7 @@
     font-weight: 300;
 }
 
-.payment + .text-wrapper button.disabled {
+.payment + .text-wrapper .checkout-button.disabled {
     pointer-events: none !important;
     background-color: #246cc7;
     opacity: .5;
@@ -826,6 +826,7 @@
         width: 70%;
         margin-bottom: 5px;
         margin-top: 5px;
+        pointer-events: all !important;
     }
 
     .payment + .text-wrapper .promo-textfield {
@@ -886,6 +887,7 @@
 
     .payment + .text-wrapper button {
         margin-top: 2px;
+        pointer-events: none !important;
     }
 
     .payment .preamble {
@@ -911,6 +913,7 @@
 
     .payment + .text-wrapper .checkout-button {
         margin: 0;
+        pointer-events: all !important;
     }
 
     .payment {
