--- a/src/components/Public/Footer/styles.css
+++ b/src/components/Public/Footer/styles.css
@@ -193,12 +193,12 @@
 
 @media only screen and (max-width: 768px) {
     .footer {
-        padding: 40px 40px 100px 40px;
+        padding: 40px;
     }
 }
 
 @media only screen and (max-width: 400px) {
     .footer {
-        padding: 20px 20px 70px 20px;
+        padding: 25px;
     }
 }
